fix callout alignment

--- a/resources/styles/organisms/callout/index.scss
+++ b/resources/styles/organisms/callout/index.scss
@@ -1,10 +1,15 @@
 .callout {
   background: var(--color-gray-100);
   padding: 5rem 0;
+  text-align: center;
 
   &__title {
     justify-self: center;
     text-align: center;
+  }
+
+  &__content {
+    text-wrap: balance;
   }
 
   &__actions {
